# dpm

./: .gitignore  dpm.py  pyproject.toml
.github/workflows/: python.yml
default_repo/audit/: __init__.py
default_repo/autohell_wrapper/: __init__.py
default_repo/avro-c/: __init__.py
default_repo/avro-cpp/: __init__.py
default_repo/base/: __init__.py
default_repo/boost/: __init__.py
default_repo/bpf_clang_cc/: __init__.py
default_repo/brotli/: __init__.py
default_repo/bzip2/: __init__.py
default_repo/capnproto/: __init__.py
default_repo/cmake_inst/: __init__.py
default_repo/cmake_wrapper/: __init__.py
default_repo/cubelib/: __init__.py
default_repo/cubew/: __init__.py
default_repo/cuda_wrapper/: __init__.py
default_repo/curl/: __init__.py
default_repo/elfutils/: __init__.py
default_repo/fftw/: __init__.py
default_repo/flang_wrapper/: __init__.py
default_repo/fmtlib/: __init__.py
default_repo/gcc_wrapper/: __init__.py
default_repo/gengetopt/: __init__.py
default_repo/gfortran_wrapper/: __init__.py
default_repo/git_wrapper/: __init__.py
default_repo/gotcha/: __init__.py
default_repo/gperf/: __init__.py
default_repo/gsasl/: __init__.py
default_repo/hdf5/: __init__.py
default_repo/hwloc/: __init__.py
default_repo/icc_wrapper/: __init__.py
default_repo/ifort_wrapper/: __init__.py
default_repo/ifx_wrapper/: __init__.py
default_repo/jansson/: __init__.py
default_repo/json-c/: __init__.py
default_repo/lapack/: __init__.py
default_repo/libaec/: __init__.py
default_repo/libbpf/: __init__.py
dpm/: __init__.py
(+50 files in other folders)
